--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-certifi          2020.6.20
-chardet          3.0.4
-idna             2.10
-pip              20.2.3
-pyTelegramBotAPI 3.7.3
-requests         2.24.0
-setuptools       47.1.0
-six              1.15.0
-urllib3          1.25.10
-wheel            0.35.1
+certifi==2020.6.20
+chardet==3.0.4
+idna==2.10
+pip==20.2.3
+pyTelegramBotAPI==3.7.3
+requests==2.24.0
+setuptools==47.1.0
+six==1.15.0
+urllib3==1.25.10
+wheel==0.35.1
 
